Closed
Bug 214063
Opened 22 years ago
Closed 22 years ago
Compiler warnings in <nsMsgFolder.cpp>, <nsMsgProtocol.cpp>, <wallet.cpp>: "defined but not used"
Categories
(SeaMonkey :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: mbockelkamp, Unassigned)
References
Details
Attachments
(3 obsolete files)
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5b) Gecko/20030724
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5b) Gecko/20030724
When compiling I get the following warnings:
e:/Mozilla/mozilla/mailnews/base/util/nsMsgFolder.cpp:367: warning: `nsresult
nsFilterBy(nsISupportsArray*, PRBool (*)(nsISupports*, void*), void*,
nsISupportsArray**)' defined but not used
e:/Mozilla/mozilla/mailnews/base/util/nsMsgProtocol.cpp:1371: warning: `
PRUnichar* GetStringByID(int)' defined but not used
e:/Mozilla/mozilla/extensions/wallet/src/wallet.cpp:107: warning: `const
char*pref_WalletExtractTables' defined but not used
e:/Mozilla/mozilla/extensions/wallet/src/wallet.cpp:116: warning: `const
char*pref_WalletServer' defined but not used
e:/Mozilla/mozilla/extensions/wallet/src/wallet.cpp:117: warning: `const
char*pref_WalletVersion' defined but not used
e:/Mozilla/mozilla/extensions/wallet/src/wallet.cpp:118: warning: `const
char*pref_WalletLastModified' defined but not used
e:/Mozilla/mozilla/extensions/wallet/src/wallet.cpp:125: warning: `
char*wallet_Server' defined but not used
e:/Mozilla/mozilla/extensions/wallet/src/wallet.cpp:1186: warning: `void
wallet_Put(nsOutputFileStream&, char)' defined but not used
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
| Reporter | ||
Comment 1•22 years ago
|
||
| Reporter | ||
Comment 2•22 years ago
|
||
| Reporter | ||
Comment 3•22 years ago
|
||
| Reporter | ||
Updated•22 years ago
|
Attachment #128625 -
Flags: superreview?(dveditz)
Attachment #128625 -
Flags: review?(dveditz)
| Reporter | ||
Updated•22 years ago
|
Attachment #128626 -
Flags: superreview?(dveditz)
Attachment #128626 -
Flags: review?(dveditz)
| Reporter | ||
Updated•22 years ago
|
Attachment #128627 -
Flags: superreview?(dveditz)
Attachment #128627 -
Flags: review?(dveditz)
Comment 4•22 years ago
|
||
Comment on attachment 128627 [details] [diff] [review]
Patch for wallet.cpp
[Check-in: See comment 8]
r=dveditz
Attachment #128627 -
Flags: superreview?(sspitzer)
Attachment #128627 -
Flags: superreview?(dveditz)
Attachment #128627 -
Flags: review?(dveditz)
Attachment #128627 -
Flags: review+
Updated•22 years ago
|
Attachment #128625 -
Flags: superreview?(dveditz)
Attachment #128625 -
Flags: review?(dveditz)
Comment 5•22 years ago
|
||
Comment on attachment 128626 [details] [diff] [review]
Patch for nsMsgProtocol.cpp [Checked in: Comment 7]
You need a mailnews reviewer for these two
Attachment #128626 -
Flags: superreview?(dveditz)
Attachment #128626 -
Flags: review?(dveditz)
| Reporter | ||
Updated•22 years ago
|
Attachment #128625 -
Flags: superreview?(sspitzer)
Attachment #128625 -
Flags: review?(scott)
| Reporter | ||
Updated•22 years ago
|
Attachment #128626 -
Flags: superreview?(sspitzer)
Attachment #128626 -
Flags: review?(scott)
Updated•22 years ago
|
Attachment #128625 -
Flags: superreview?(sspitzer)
Attachment #128625 -
Flags: superreview+
Attachment #128625 -
Flags: review?(scott)
Attachment #128625 -
Flags: review+
Comment 6•22 years ago
|
||
Comment on attachment 128626 [details] [diff] [review]
Patch for nsMsgProtocol.cpp [Checked in: Comment 7]
I did an lxr search on both of these routines to make sure they weren't called
by anyone. There were a lot of possible matches for GetStringByID.
Please go through that list and make sure we really aren't using this method
anymore before checking in.
Thanks!
(Just because it is unused on one platform doesn't mean it isn't getting called
on another =)).
Attachment #128626 -
Flags: superreview?(sspitzer)
Attachment #128626 -
Flags: superreview+
Attachment #128626 -
Flags: review?(scott)
Attachment #128626 -
Flags: review+
Comment 7•22 years ago
|
||
I've checked in the patches for nsMsgFolder and nsMsgProtocol
| Reporter | ||
Updated•22 years ago
|
Attachment #128625 -
Attachment description: Patch for nsMsgFolder.cpp → Patch for nsMsgFolder.cpp [checked in]
| Reporter | ||
Updated•22 years ago
|
Attachment #128626 -
Attachment description: Patch for nsMsgProtocol.cpp → Patch for nsMsgProtocol.cpp [checked in]
| Reporter | ||
Updated•22 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•22 years ago
|
Summary: Compiler warnings in nsMsgFolder.cpp, nsMsgProtocol.cpp, wallet.cpp → Compiler warnings in <nsMsgFolder.cpp>, <nsMsgProtocol.cpp>, <wallet.cpp>: "defined but not used"
Updated•22 years ago
|
Attachment #128626 -
Attachment description: Patch for nsMsgProtocol.cpp [checked in] → Patch for nsMsgProtocol.cpp [Checked in: Comment 7]
Attachment #128626 -
Attachment is obsolete: true
Updated•22 years ago
|
Attachment #128625 -
Attachment description: Patch for nsMsgFolder.cpp [checked in] → Patch for nsMsgFolder.cpp [Checked in: Comment 7]
Attachment #128625 -
Attachment is obsolete: true
Comment 8•22 years ago
|
||
Comment on attachment 128627 [details] [diff] [review]
Patch for wallet.cpp
[Check-in: See comment 8]
Check in: { 1.354 timeless%mozdev.org 2003-10-29 18:04
Bug 204184 Remove unused items from wallet.cpp/wallet.h
r=dwitte sr=bryner }
Attachment #128627 -
Attachment description: Patch for wallet.cpp → Patch for wallet.cpp
[Check-in: See comment 8]
Attachment #128627 -
Attachment is obsolete: true
Attachment #128627 -
Flags: superreview?(sspitzer)
Updated•22 years ago
|
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•