Bug #214063 --> remove obsolete method that no one is using. Patch by mbockelkamp@web.de (Matthias Bockelkamp)

r/sr=mscott